<resources>
    <string name="app_name">HalfWay</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_maps">Map</string>

    <string name="home_open_now">Open Now</string>
    <string name="home_submit">Submit</string>
    <string name="home_place_type_label">Place Type</string>
    <string name="settings_logout">Logout</string>

    <string name="place_type_anywhere_label">Anywhere</string>
    <string name="place_type_restaurant_label">Restaurant</string>
    <string name="place_type_cafe_label">Cafe</string>
    <string name="place_type_park_label">Park</string>
    <string name="place_type_mall_label">Mall</string>
    <string name="place_type_movies_label">Movies</string>
    <string name="place_type_tourist_attraction_label">Tourist Attraction</string>
    <string name="place_type_bar_label">Bar</string>
    <string name="place_type_night_club_label">Night Club</string>

    <string name="place_type_anywhere_value" />
    <string name="place_type_restaurant_value">restaurant</string>
    <string name="place_type_cafe_value">cafe</string>
    <string name="place_type_park_value">park</string>
    <string name="place_type_mall_value">shopping_mall</string>
    <string name="place_type_movies_value">movie_theater</string>
    <string name="place_type_tourist_attraction_value">tourist_attraction</string>
    <string name="place_type_bar_value">bar</string>
    <string name="place_type_night_club_value">night_club</string>


    <string-array name="place_types_labels">
        <item>@string/place_type_anywhere_label</item>
        <item>@string/place_type_restaurant_label</item>
        <item>@string/place_type_cafe_label</item>
        <item>@string/place_type_park_label</item>
        <item>@string/place_type_mall_label</item>
        <item>@string/place_type_movies_label</item>
        <item>@string/place_type_tourist_attraction_label</item>
        <item>@string/place_type_bar_label</item>
        <item>@string/place_type_night_club_label</item>
    </string-array>

    <string-array name="place_types_values">
        <item>@string/place_type_anywhere_value</item>
        <item>@string/place_type_restaurant_value</item>
        <item>@string/place_type_cafe_value</item>
        <item>@string/place_type_park_value</item>
        <item>@string/place_type_mall_value</item>
        <item>@string/place_type_movies_value</item>
        <item>@string/place_type_tourist_attraction_value</item>
        <item>@string/place_type_bar_value</item>
        <item>@string/place_type_night_club_value</item>
    </string-array>

</resources>