<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="xyz.eddief.halfway.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_maps"
            app:destination="@id/navigation_maps" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="xyz.eddief.halfway.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="xyz.eddief.halfway.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="xyz.eddief.halfway.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps">
        <argument
            android:name="mapData"
            app:argType="xyz.eddief.halfway.data.models.MapData" />
    </fragment>
</navigation>