<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_2x">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeSubmit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginEnd="@dimen/margin_2x"
            android:layout_marginBottom="@dimen/margin_2x"
            android:alpha=".5"
            android:background="@drawable/circle_bg"
            android:padding="@dimen/margin_1x"
            android:text="@string/home_submit"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeCenterAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_1x"
            android:textColor="@color/quantum_grey600"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/homeSubmit"
            app:layout_constraintEnd_toStartOf="@id/homeSubmit"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/leftProfilesCenterGuideline"
            app:layout_constraintTop_toTopOf="@id/homeSubmit"
            app:layout_constraintVertical_bias="0.33"
            app:layout_constraintWidth_default="wrap"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homePlaceTypesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_half_x"
                android:text="@string/home_place_type_label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/homePlacesType"
                style="@style/MaterialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1x" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/homeOpenNowCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layoutDirection="rtl"
                android:text="@string/home_open_now" />
        </LinearLayout>

        <xyz.eddief.halfway.ui.main.home.HomeProfileView
            android:id="@+id/homeProfileMe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toBottomOf="@id/homeSubmit"
            app:layout_constraintVertical_bias="1.0" />

        <xyz.eddief.halfway.ui.main.home.HomeProfileView
            android:id="@+id/homeProfileOther1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/homeSubmit"
            app:layout_constraintEnd_toStartOf="@id/leftGuideline"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <xyz.eddief.halfway.ui.main.home.HomeProfileView
            android:id="@+id/homeProfileOther2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/homeSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toEndOf="@id/rightGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <xyz.eddief.halfway.ui.main.home.HomeLineView
            android:id="@+id/homeProfileLineMe"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_half_x"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/homeProfileMe"
            app:layout_constraintEnd_toEndOf="@id/rightProfilesCenterGuideline"
            app:layout_constraintStart_toStartOf="@id/submitCenterGuideline"
            app:layout_constraintTop_toBottomOf="@id/homeSubmit" />

        <xyz.eddief.halfway.ui.main.home.HomeLineView
            android:id="@+id/homeProfileLineOther1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_half_x"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/homeSubmit"
            app:layout_constraintEnd_toEndOf="@id/submitCenterGuideline"
            app:layout_constraintStart_toStartOf="@id/leftProfilesCenterGuideline"
            app:layout_constraintTop_toBottomOf="@id/homeProfileOther1" />

        <xyz.eddief.halfway.ui.main.home.HomeLineView
            android:id="@+id/homeProfileLineOther2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_half_x"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/submitCenterGuideline"
            app:layout_constraintEnd_toEndOf="@id/rightProfilesCenterGuideline"
            app:layout_constraintStart_toEndOf="@id/homeSubmit"
            app:layout_constraintTop_toBottomOf="@id/homeProfileOther2"
            app:reverseLine="true" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".75" />

        <View
            android:id="@+id/submitCenterGuideline"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/homeSubmit"
            app:layout_constraintEnd_toEndOf="@id/homeSubmit"
            app:layout_constraintStart_toStartOf="@id/homeSubmit"
            app:layout_constraintTop_toTopOf="@id/homeSubmit" />

        <View
            android:id="@+id/leftProfilesCenterGuideline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@id/homeProfileOther1"
            app:layout_constraintStart_toStartOf="@id/homeProfileOther1" />

        <View
            android:id="@+id/rightProfilesCenterGuideline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@id/homeProfileMe"
            app:layout_constraintStart_toStartOf="@id/homeProfileMe" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/homeLoader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>